crates/oxc_react_compiler/tests/snapshots/concise-arrow-expr.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/concise-arrow-expr.js
---
import { c as _c } from "react/compiler-runtime";
function component() {
	const $ = _c(1);
	const [, setX] = useState(0);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		const handler = (v) => setX(v);
		t0 = <Foo handler={handler} />;
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
