crates/oxc_react_compiler/tests/snapshots/conditional-set-state-in-render.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/conditional-set-state-in-render.js
---
function Component(props) {
	const [x, setX] = useState(0);
	const foo = () => {
		setX(1);
	};
	if (props.cond) {
		setX(2);
		foo();
	}
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
