crates/oxc_react_compiler/tests/snapshots/conflict-codegen-instrument-forget.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/conflict-codegen-instrument-forget.js
---
import { shouldInstrument as _shouldInstrument3, useRenderCounter } from "react-compiler-runtime";
import { c as _c } from "react/compiler-runtime";
// @enableEmitInstrumentForget @compilationMode:"annotation"
import { identity } from "shared-runtime";
function Bar(props) {
	"use forget";
	const $ = _c(4);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = identity(null);
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	const shouldInstrument = t0;
	let t1;
	if ($[1] === Symbol.for("react.memo_cache_sentinel")) {
		t1 = identity(null);
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	const _shouldInstrument = t1;
	let t2;
	if ($[2] !== props.bar) {
		t2 = <div style={shouldInstrument} other={_shouldInstrument}>{props.bar}</div>;
		$[2] = props.bar;
		$[3] = t2;
	} else {
		t2 = $[3];
	}
	return t2;
}
function Foo(props) {
	"use forget";
	const $ = _c(2);
	let t0;
	if ($[0] !== props.bar) {
		t0 = <Foo>{props.bar}</Foo>;
		$[0] = props.bar;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	return t0;
}
