crates/oxc_react_compiler/tests/snapshots/conflicting-dollar-sign-variable.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/conflicting-dollar-sign-variable.js
---
import { c as _c } from "react/compiler-runtime";
import { identity } from "shared-runtime";
function Component(props) {
	const $0 = _c(1);
	let t0;
	if ($0[0] === Symbol.for("react.memo_cache_sentinel")) {
		const $ = identity("jQuery");
		t0 = identity([$]);
		$0[0] = t0;
	} else {
		t0 = $0[0];
	}
	const t0$0 = t0;
	return t0$0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{}]
};
